--- a/AzureAIContentSafety.UI/src/app/components/posts/posts.component.scss
+++ b/AzureAIContentSafety.UI/src/app/components/posts/posts.component.scss
@@ -1,3 +1,7 @@
+.container {
+  padding-top: 20px;
+}
+
 .avatar {
   width: 40px;
   height: 40px;
@@ -9,7 +13,7 @@
   border-radius: 10px;
 }
 .image-container img.blur {
-  filter: blur(20px);
+  filter: blur(10px);
   transition: filter 0.3s ease;
 }
 .toggle-blur-btn {
