--- a/AzureAIContentSafety.UI/src/app/components/posts/posts.component.scss
+++ b/AzureAIContentSafety.UI/src/app/components/posts/posts.component.scss
@@ -7,15 +7,23 @@
   height: 40px;
   border-radius: 50%;
 }
+
 .image-container {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
+  max-width: fit-content;
+
+  img {
+    max-height: 450px;
+  }
+
+  img.blur {
+    filter: blur(10px);
+    transition: filter 0.3s ease;
+  }
 }
-.image-container img.blur {
-  filter: blur(10px);
-  transition: filter 0.3s ease;
-}
+
 .toggle-blur-btn {
   position: absolute;
   top: 10px;
@@ -26,4 +34,5 @@
   padding: 5px 10px;
   cursor: pointer;
   border-radius: 5px;
+  font-size: 0.85rem;
 }
