refactor: enhance in dates and blur effect

--- a/AzureAIContentSafety.UI/src/app/components/post-create/post-create.component.html
+++ b/AzureAIContentSafety.UI/src/app/components/post-create/post-create.component.html
@@ -8,6 +8,7 @@
       ></textarea>
       <input
         type="file"
+        accept="image/*"
         #imageInput
         class="form-control-file mb-3"
         (change)="onFileSelected($event)"
