--- a/AzureAIContentSafety.UI/src/app/components/posts/posts.component.scss
+++ b/AzureAIContentSafety.UI/src/app/components/posts/posts.component.scss
@@ -36,3 +36,48 @@
   border-radius: 5px;
   font-size: 0.85rem;
 }
+
+.skeleton-card {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #f0f0f0;
+  margin-bottom: 15px;
+
+  .skeleton-header,
+  .skeleton-text,
+  .skeleton-avatar,
+  .skeleton-image-container {
+    background-color: #ddd;
+  }
+  .skeleton-header {
+    height: 60px;
+  }
+  .skeleton-btn {
+    width: 20px;
+    height: 20px;
+  }
+  .skeleton-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+  .skeleton-text {
+    height: 16px;
+    margin: 5px 0;
+  }
+  .skeleton-user {
+    width: 100px;
+  }
+  .skeleton-date {
+    width: 80px;
+  }
+  .skeleton-post {
+    width: 100%;
+    height: 50px;
+  }
+  .skeleton-image-container {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+  }
+}
