--- a/AzureAIContentSafety.UI/src/app/components/posts/posts.component.html
+++ b/AzureAIContentSafety.UI/src/app/components/posts/posts.component.html
@@ -24,71 +24,88 @@
       ></app-post-create>
     </div>
   </div>
-  <div class="row" *ngFor="let post of posts">
-    <div class="col-12">
-      <div class="card mb-3">
-        @defer (on viewport) {
-          <div
-            class="card-header d-flex justify-content-between align-items-center"
-          >
-            <div class="d-flex gap-2 align-items-center">
-              <img
-                src="assets/user-avatar.png"
-                alt="User Avatar"
-                class="avatar mr-2"
-              />
-              <div>
-                <p class="mb-0 font-weight-bold">User</p>
-                <p class="mb-0 text-muted">
-                  {{ post.createdAt | date: "medium" }}
-                </p>
-              </div>
-            </div>
-            <button
-              class="btn btn-danger btn-sm"
-              (click)="deletePost(post)"
-              [disabled]="post.isDeleting"
-            >
-              X
-            </button>
-          </div>
-          <div class="card-body">
-            <p class="card-text">{{ post.text }}</p>
-            <div class="image-container" *ngIf="post.imagePath">
-              <img
-                [src]="post.imagePath"
-                [class.blur]="post.imageIsBlurred"
-                class="img-fluid rounded"
-              />
-              <button
-                *ngIf="post.imageIsHarmful"
-                class="toggle-blur-btn"
-                (click)="toggleBlur(post)"
-              >
-                {{ post.imageIsBlurred ? "Show image" : "Hide image" }}
-              </button>
-            </div>
-          </div>
-        } @placeholder {
-          <div class="skeleton-card">
+
+  <div
+    class="posts"
+    infiniteScroll
+    [infiniteScrollDistance]="1"
+    [infiniteScrollThrottle]="100"
+    (scrolled)="onScroll()"
+  >
+    <div class="row" *ngFor="let post of posts">
+      <div class="col-12">
+        <div class="card mb-3">
+          @defer (on viewport) {
             <div
-              class="skeleton-header d-flex justify-content-between align-items-center"
+              class="card-header d-flex justify-content-between align-items-center"
             >
               <div class="d-flex gap-2 align-items-center">
-                <div class="skeleton-avatar"></div>
+                <img
+                  src="assets/user-avatar.png"
+                  alt="User Avatar"
+                  class="avatar mr-2"
+                />
                 <div>
-                  <p class="skeleton-text skeleton-user"></p>
-                  <p class="skeleton-text skeleton-date"></p>
+                  <p class="mb-0 font-weight-bold">User</p>
+                  <p class="mb-0 text-muted">
+                    {{ post.createdAt | date: "medium" }}
+                  </p>
                 </div>
               </div>
+              <button
+                class="btn btn-danger btn-sm"
+                (click)="deletePost(post)"
+                [disabled]="post.isDeleting"
+              >
+                X
+              </button>
             </div>
             <div class="card-body">
-              <p class="skeleton-text skeleton-post"></p>
-              <div class="skeleton-image-container"></div>
+              <p class="card-text">{{ post.text }}</p>
+              <div class="image-container" *ngIf="post.imagePath">
+                <img
+                  [src]="post.imagePath"
+                  [class.blur]="post.imageIsBlurred"
+                  class="img-fluid rounded"
+                />
+                <button
+                  *ngIf="post.imageIsHarmful"
+                  class="toggle-blur-btn"
+                  (click)="toggleBlur(post)"
+                >
+                  {{ post.imageIsBlurred ? "Show image" : "Hide image" }}
+                </button>
+              </div>
             </div>
-          </div>
-        }
+          } @placeholder {
+            <div class="skeleton-card">
+              <div
+                class="skeleton-header d-flex justify-content-between align-items-center"
+              >
+                <div class="d-flex gap-2 align-items-center">
+                  <div class="skeleton-avatar"></div>
+                  <div>
+                    <p class="skeleton-text skeleton-user"></p>
+                    <p class="skeleton-text skeleton-date"></p>
+                  </div>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="skeleton-text skeleton-post"></p>
+                <div class="skeleton-image-container"></div>
+              </div>
+            </div>
+          }
+        </div>
       </div>
     </div>
   </div>
+
+  <button
+    *ngIf="posts.length > 0"
+    class="btn btn-primary btn-scroll"
+    (click)="scrollToTop()"
+  >
+    Go to Top
+  </button>
 </div>
